broken right side

--- a/Logitech_shop/index.html
+++ b/Logitech_shop/index.html
@@ -1,45 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Pelle's Logitech Shop </title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="author" content="Pelle">
-      <meta name="keywords" content="Pelle, Logitech shop">
-      <meta name="description" content="The Official Pelle Logitech shop, Get your gamer gear now "> 
-      <link rel="stylesheet" type="text/css" href="style.css">
-      	<div id="wrapper">
-<body>  
 
-<div class="topnav">
-  <a class="active" href="index.html">Home</a>
-  <a href="Accessories.html">Accessories</a>
-  <div class="topnav-right">
-    <a href="#search">Search</a>
-    <a href="#about">About</a>
-  </div>
-</div>
+<head>
+	<title>Pelle's Logitech Shop </title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="author" content="Pelle">
+	<meta name="keywords" content="Pelle, Logitech shop">
+	<meta name="description" content="The Official Pelle Logitech shop, Get your gamer gear now ">
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
 
-<br><br>
+<body>
+
+	<div class="topnav">
+		<a class="active" href="index.html">Home</a>
+		<a href="Accessories.html">Accessories</a>
+		<div class="topnav-right">
+			<a href="#search">Search</a>
+			<a href="#about">About</a>
+		</div>
+	</div>
+
+	<br><br>
     
 <article>
 
 
-<h1 class="yikes"> &#128512; Pelle's Logitech Shop &#128512;</h1>
+
 
 <div class="wrapper">
-  <div class="box a"><iframe width="500" height="315"
-src="https://www.youtube.com/embed/2g1UjEvEKqc" frameborder="0" 
-allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>  
-<div class="box b"><h1> THE OFFICIAL GAMING GEAR OF SHROUD </h1> Play like legendary sharpshooter shroud and celebrate his latest Logitech G partnership with the new PRO Series - SHROUD Edition. Designed with pros and engineered to win, you won’t want to miss this exclusive release of pro-grade Logitech G gear skinned with shroud’s sleek new icon.</div>
-  <div class="box c"><p><h1>INNOVATORS IN DESIGN AND TECHNOLOGY</h1>
-<p>Logitech G is a team focused on pushing the boundaries of performance and exploring the possibilities of play. The gaming world is forever evolving and we are dedicated to meeting the challenge. Through better gear and game integration, we facilitate an every greater gaming experience. From HERO, our most accurate gaming sensor to the most immersive, to LIGHTSYNC, our game-driven RGB technology.</p></div>
-  <div class="box d">WE ARE LOGITECH G <br><br>
-    <img src="https://i.pinimg.com/originals/ba/b7/8b/bab78b1ab6202c17519384fb90b06412.png" 
-         alt="logitech logo" width="413.25" height="354.25"></p> </div>
-<div class="box e"> <p>TEST TEKST</p><p>TEST TEKST</p>
-<p>TEST TEKST</p></div>
-<div class="box f"> <p>TEST TEKST</p><p>TEST TEKST</p><p>TEST TEKST</p><p>TEST TEKST</p></div>
+  <h1 class="yikes"> &#128512; Pelle's Logitech Shop &#128512;</h1>
+    <div class="box a"><iframe width="500" height="315"
+    src="https://www.youtube.com/embed/2g1UjEvEKqc" frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>  
+    <div class="box b"><h1> THE OFFICIAL GAMING GEAR OF SHROUD </h1> Play like legendary sharpshooter shroud and celebrate his latest Logitech G partnership with the new PRO Series - SHROUD Edition. Designed with pros and engineered to win, you won’t want to miss this exclusive release of pro-grade Logitech G gear skinned with shroud’s sleek new icon.</div>
+      <div class="box c"><p><h1>INNOVATORS IN DESIGN AND TECHNOLOGY</h1>
+    <p>Logitech G is a team focused on pushing the boundaries of performance and exploring the possibilities of play. The gaming world is forever evolving and we are dedicated to meeting the challenge. Through better gear and game integration, we facilitate an every greater gaming experience. From HERO, our most accurate gaming sensor to the most immersive, to LIGHTSYNC, our game-driven RGB technology.</p></div>
+      <div class="box d">WE ARE LOGITECH G <br><br>
+        <img src="https://i.pinimg.com/originals/ba/b7/8b/bab78b1ab6202c17519384fb90b06412.png" 
+            alt="logitech logo" width="413.25" height="354.25"></p> </div>
+    <div class="box e"> <p>TEST TEKST</p><p>TEST TEKST</p>
+    <p>TEST TEKST</p></div>
+    <div class="box f"> <p>TEST TEKST</p><p>TEST TEKST</p><p>TEST TEKST</p><p>TEST TEKST</p></div>
 </div>   
 
 
