--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <h1 class="center">Hub World</h1>
 
 <a href="Logitech_shop">Logitech_shop </a> 
-<br><br>
+<h1>Hoofdstuk 1</h1
 <a href="Fundament/fundament_opdracht_1.html">fundament opdracht 1</a> 
 <br><br>
 <a href="Fundament/fundament_opdracht_2.html">fundament opdracht 2</a> 
