--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <h1 class="center">Hub World</h1>
 
 <a href="Logitech_shop">Logitech_shop </a> 
-<h1>Hoofdstuk 1</h1
-<a href="Fundament/fundament_opdracht_1.html">fundament opdracht 1</a> 
+<h1>Hoofdstuk 1</h1>
+<a href="https://larsthenoob.github.io/Fundament/fundament_opdracht_1.html">fundament opdracht 1</a> 
 <br><br>
 <a href="Fundament/fundament_opdracht_2.html">fundament opdracht 2</a> 
 <br><br>
