new blog/german site

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 
 <body>
 	<h1 class="center">Hub World</h1>
-
 	<a href="Logitech_shop">Logitech_shop </a>
+  <br><br>
+  <a href="Blog/index.html">German Blog</a>
 	<h1>Hoofdstuk 1</h1>
 	<a href="https://larsthenoob.github.io/Fundament/fundament_opdracht_1.html">fundament opdracht 1</a>
 	<br><br>
@@ -21,11 +22,11 @@
 <br><br>
 <a href="Fundament/fundament_opdracht_6/fundament_opdracht_6.html">niet klaar fundament opdracht 6</a> 
 <br><br>
-<a href="Fundament/fundament_opdracht_7.html">niet klaar fundament opdracht 7</a> 
+<a href="Fundament/fundament_opdracht_7/fundament_opdracht_7.html">niet klaar fundament opdracht 7</a> 
 <br><br>
 <h1 class="center"> About me </h1>
 <br>
-<a class="Right" href="Fundament/fundament_opdracht_7.html">My Favorite games</a>
+<a class="Right" href="none">My Favorite games</a>
 
 
 
