--- a/Fundament/fundament_opdracht_7/fundament_opdracht_7.html
+++ b/Fundament/fundament_opdracht_7/fundament_opdracht_7.html
@@ -4,9 +4,9 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body>
 
-
+<div class="wrapper">
 <h1>nog niet af yo</h1>
+</div>
 
 </html>
