--- a/Fundament/fundament_opdracht_7/fundament_opdracht_7.html
+++ b/Fundament/fundament_opdracht_7/fundament_opdracht_7.html
@@ -6,7 +6,13 @@
 
 
 <div class="wrapper">
-<div class="box a"<h1>nog niet af yo</h1></div>
+<div class="box a"><h1>a</h1></div>
+<div class="box b"><h1>b</h1></div>
+<div class="box c"><h1>c</h1></div>
+<div class="box d"><h1>d</h1></div>
+<div class="box e"><h1>e<h1></div>
+<div></div>
+
 </div>
 
 </html>
