--- a/Fundament/fundament_opdracht_7/fundament_opdracht_7.html
+++ b/Fundament/fundament_opdracht_7/fundament_opdracht_7.html
@@ -11,8 +11,9 @@
 <div class="box c"><h1>c</h1></div>
 <div class="box d"><h1>d</h1></div>
 <div class="box e"><h1>e<h1></div>
-<div></div>
-
+<div class="box f"><h1>f</h1></div>
+<div class="box g"><h1>g</h1></div>
+<div class="box h"><h1>h</h1></div>
 </div>
 
 </html>
