--- a/Logitech_shop/Accessories.html
+++ b/Logitech_shop/Accessories.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
 <title>Accessories</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="stylesheet" type="text/css" href="styles.css">
+<link rel="stylesheet" type="text/css" href="styles.css">
+<link rel="shortcut icon" type="image/x-icon" href="p/logo.png" />
+</head>
 <body>
 
 <div class="topnav">
