--- a/Fundament/fundament_opdracht_7/fundament_opdracht_7.html
+++ b/Fundament/fundament_opdracht_7/fundament_opdracht_7.html
@@ -4,16 +4,18 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-
+<body>
 <div class="wrapper">
-<div class="box a"><h1>a</h1></div>
-<div class="box b"><h1>b</h1></div>
-<div class="box c"><h1>c</h1></div>
-<div class="box d"><h1>d</h1></div>
-<div class="box e"><h1>e<h1></div>
-<div class="box f"><h1>f</h1></div>
-<div class="box g"><h1>g</h1></div>
-<div class="box h"><h1>h</h1></div>
+<div class="box a"><h1></h1></div>
+<div class="box b"><h1></h1></div>
+<div class="box c"><h1></h1></div>
+<div class="box e"><h1><h1></div>
+<div class="box h"><h1></h1></div>
+<div class="box d"><h1></h1></div>
+<div class="box g"><h1></h1></div>
+<div class="box f"><h1></h1></div>
+<div class="box i"><h1></h1></div>
+<div class="box j"><h1></h1></div>
 </div>
-
+</body>
 </html>
