--- a/Fundament/fundament_opdracht_7/fundament_opdracht_7.html
+++ b/Fundament/fundament_opdracht_7/fundament_opdracht_7.html
@@ -6,16 +6,16 @@
 
 <body>
 <div class="wrapper">
-<div class="box a"><h1></h1></div>
-<div class="box b"><h1></h1></div>
-<div class="box c"><h1></h1></div>
-<div class="box e"><h1><h1></div>
-<div class="box h"><h1></h1></div>
-<div class="box d"><h1></h1></div>
-<div class="box g"><h1></h1></div>
-<div class="box f"><h1></h1></div>
-<div class="box i"><h1></h1></div>
-<div class="box j"><h1></h1></div>
+<div class="box a"></div>
+<div class="box b"></div>
+<div class="box c"></div>
+<div class="box e"></div>
+<div class="box h"></div>
+<div class="box d"></div>
+<div class="box g"></div>
+<div class="box f"></div>
+<div class="box i"></div>
+<div class="box j"></div>
 </div>
 </body>
 </html>
