--- a/Logitech_shop/Accessories.html
+++ b/Logitech_shop/Accessories.html
@@ -21,7 +21,7 @@
 <article>
 
 <div class="wrapper">
-  <div class="box a"><h1 style="background-color:yellow;">The new Toggaf Headset</h1></div>
+  <div class="box a"><h1>The new Toggaf Headset</h1></div>
   <div class="box b"> <a href="https://youtu.be/R6PMCdByf8w?t=7">
     <img src="https://resource.logitechg.com/content/dam/gaming/en/products/pro-x/pro-headset-gallery-1.png" 
          alt="pro headset" width="200" height="300"></a></div>
@@ -29,12 +29,12 @@
   <div class="box c">
 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
 <img src="https://assets.razerzone.com/eeimages/support/products/1563/sukepilq.png" alt="Headset" width= 675 height=400> </a> </div>
-  <div class="box d"><h1 style="background-color:tomato;">  The FURRY HEADSET </h1></div>
+  <div class="box d"><h1>  The FURRY HEADSET </h1></div>
   <div class="box e"> <a href="https://youtu.be/dC7bV9PY3e4">
 <img src="https://images.hermanmiller.group/m/6e74a6a3c692033d/W-HM_2517590_100160889_graphite_black_d3.png?blend-mode=darken&blend=f8f8f8&trim-color=ffffff&trim=color&bg=f8f8f8&auto=format&w=2000&h=1000&q=60" alt="Headset" width=250 height=300> </a></div>
-<div class="box f"><span style="background-color:lightgray;">The Back Breaking Chair</span></div>
-<div class="box g"><h1 style="background-color:Violet;">The Interstellar Mouse </h1></div>
-<div class="box h"> <a href="https://youtu.be/a3lcGnMhvsA?t=137">
+<div class="box f"><span>The Back Breaking Chair</span></div>
+<div class="box g"><h1>The Interstellar Mouse </h1></div>
+<div class="box h"> <a>
 <img src="https://i.ytimg.com/vi/aANF2OOVX40/maxresdefault.jpg" alt="Headset" width=250 height=75> </a></div>
 
 </article>
