--- a/Logitech_shop/index.html
+++ b/Logitech_shop/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <link rel="shortcut icon" type="image/x-icon" href="p/logo.png" />
-	<title>Pelle's Logitech Shop </title>
+	<title>Logitech G</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="Pelle">
-	<meta name="keywords" content="Pelle, Logitech shop">
+	<meta name="keywords" content="Pelle, Logitech G">
 	<meta name="description" content="The Official Pelle Logitech shop, Get your gamer gear now ">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
