--- a/Logitech_shop/Accessories.html
+++ b/Logitech_shop/Accessories.html
@@ -29,7 +29,7 @@
   <div class="box c">
 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
 <img src="https://assets.razerzone.com/eeimages/support/products/1563/sukepilq.png" alt="Headset" width= 675 height=400> </a> </div>
-  <div class="box d"><h1>  The FURRY HEADSET </h1></div>
+  <div class="box d"><h1>  The PINK HEADSET </h1></div>
   <div class="box e"> <a href="https://youtu.be/dC7bV9PY3e4">
 <img src="https://images.hermanmiller.group/m/6e74a6a3c692033d/W-HM_2517590_100160889_graphite_black_d3.png?blend-mode=darken&blend=f8f8f8&trim-color=ffffff&trim=color&bg=f8f8f8&auto=format&w=2000&h=1000&q=60" alt="Headset" width=250 height=300> </a></div>
 <div class="box f"><span>The Back Breaking Chair</span></div>
