--- a/Logitech_shop/index.html
+++ b/Logitech_shop/index.html
@@ -18,8 +18,8 @@
 		<a class="active" href="index.html">Home</a>
 		<a href="Accessories.html">Accessories</a>
 		<div class="topnav-right">
-			<a href="#search">Search</a>
-			<a href="#about">About</a>
+			<a href="#search">Empty</a>
+			<a href="#about">Empty</a>
 		</div>
 	</div>
 
