--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 
 <head>
 	<link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="shortcut icon" type="image/x-icon" href="p/Top.jpg">
 </head>
 
 <body>
 	<h1 class="center">Hub World</h1>
 	<a href="Logitech_shop">Logitech_shop </a>
   <br><br>
-  <a href="Blog/index.html">German Blog</a>
+  <a href="https://workground.jonkopaffers.repl.co/">German Blog</a>
 	<h1>Hoofdstuk 1</h1>
 	<a href="https://larsthenoob.github.io/Fundament/fundament_opdracht_1.html">fundament opdracht 1</a>
 	<br><br>
@@ -20,9 +21,9 @@
 <br><br>
 <a href="Fundament/fundament_opdracht_5.html">fundament opdracht 5</a> 
 <br><br>
-<a href="Fundament/fundament_opdracht_6/fundament_opdracht_6.html">niet klaar fundament opdracht 6</a> 
+<a href="Fundament/fundament_opdracht_6/fundament_opdracht_6.html">fundament opdracht 6</a> 
 <br><br>
-<a href="Fundament/fundament_opdracht_7/fundament_opdracht_7.html">niet klaar fundament opdracht 7</a> 
+<a href="Fundament/fundament_opdracht_7/fundament_opdracht_7.html">fundament opdracht 7</a> 
 <br><br>
 <h1 class="center"> About me </h1>
 <br>
