--- a/Logitech_shop/index.html
+++ b/Logitech_shop/index.html
@@ -9,7 +9,7 @@
 	<meta name="author" content="Pelle">
 	<meta name="keywords" content="Pelle, Logitech G">
 	<meta name="description" content="The Official Pelle Logitech shop, Get your gamer gear now ">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
 		<a href="Accessories.html">Accessories</a>
 		<div class="topnav-right">
 			<a href="#search">Empty</a>
-			<a href="#about">Empty</a>
+			<a href="About.html">About</a>
 		</div>
 	</div>
 
