--- a/Logitech_shop/About.html
+++ b/Logitech_shop/About.html
@@ -17,15 +17,14 @@
   </div>
 </div>
 <div class="wrapper">
-    <div class="box a"></div>  
-    <div class="box b"></div>
-      <div class="box c"></div>
+    <div class="box a"><h1>a</h1></div>  
+    <div class="box b"><h1>b</h1></div>
+      <div class="box c"><h1>c</h1></div>
       <div class="box d">WE ARE LOGITECH G <br><br>
         <img src="https://i.pinimg.com/originals/ba/b7/8b/bab78b1ab6202c17519384fb90b06412.png" 
             alt="logitech logo" width="413.25" height="354.25"></p> </div>
-    <div class="box e"> <p>TEST TEKST</p><p>TEST TEKST</p>
-    <p>TEST TEKST</p></div>
-    <div class="box f"> <p>TEST TEKST</p><p>TEST TEKST</p><p>TEST TEKST</p><p>TEST TEKST</p></div>
+    <div class="box e"><p>TEST TEKST</p></div>
+    <div class="box f"><p>TEST TEKST</p></div>
 </div>   
 
 
