updated home and about

--- a/Logitech_shop/About.html
+++ b/Logitech_shop/About.html
@@ -17,14 +17,16 @@
   </div>
 </div>
 <div class="wrapper">
-    <div class="box a"><h1>a</h1></div>  
-    <div class="box b"><h1>b</h1></div>
+    <div class="box a"><h1>a WE ARE LOGITECH G</h1></div>  
+    <div class="box b">b<h1>INNOVATORS IN DESIGN AND TECHNOLOGY</h1><p>Logitech G is a team focused on pushing the boundaries of performance and exploring the possibilities of play. The gaming world is forever evolving and we are dedicated to meeting the challenge. Through better gear and game integration, we facilitate an every greater gaming experience. From HERO, our most accurate gaming sensor to the most immersive, to LIGHTSYNC, our game-driven RGB technology.</p></div>
       <div class="box c"><h1>c</h1></div>
       <div class="box d">WE ARE LOGITECH G <br><br>
         <img src="https://i.pinimg.com/originals/ba/b7/8b/bab78b1ab6202c17519384fb90b06412.png" 
             alt="logitech logo" width="413.25" height="354.25"></p> </div>
-    <div class="box e"><p>TEST TEKST</p></div>
-    <div class="box f"><p>TEST TEKST</p></div>
+    <div class="box e">E <h1>ADVANCED GEAR FOR ADVANCED GAMING</h1><p>Logitech G holds a long list of industry firsts in the advancement of gaming gear. We have a long legacy of inventing new technology and optimizing engineering, but what we really care about is what’s next.</p></div>
+    <div class="box f"><p>F</p></div>
+    <div class="box g"><p>g</p></div>
+    <div class="box h"><p>h</p></div>
 </div>   
 
 
