--- a/Logitech_shop/index.html
+++ b/Logitech_shop/index.html
@@ -41,9 +41,8 @@
       <div class="box d">WE ARE LOGITECH G <br><br>
         <img src="https://i.pinimg.com/originals/ba/b7/8b/bab78b1ab6202c17519384fb90b06412.png" 
             alt="logitech logo" width="413.25" height="354.25"></p> </div>
-    <div class="box e"> <p>TEST TEKST</p><p>TEST TEKST</p>
-    <p>TEST TEKST</p></div>
-    <div class="box f"> <p>TEST TEKST</p><p>TEST TEKST</p><p>TEST TEKST</p><p>TEST TEKST</p></div>
+    <div class="box e"><h1>ADVANCED GAMING GEAR</h1><p>Logitech G is dedicated to advancing the performance and passion for play through design and technology innovation.</p></div>
+    <div class="box f"><h1>SPONSORED TEAMS</h1><p>Dedication to peak performance and advancing play are attributes Logitech G shares with esports professionals. We are proud and humbled to support the best players, in addition to all players, around the world.</p></div>
 </div>   
 
 
