--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<a href="Logitech_shop">Logitech_shop </a>
   <br><br>
   <a href="https://workground.jonkopaffers.repl.co/">German Blog</a>
+  <br><br>
+  <a href="https://springhigh.repl.co/">Leerplein Leerpleintoernooi</a>
 	<h1>Hoofdstuk 1</h1>
 	<a href="https://larsthenoob.github.io/Fundament/fundament_opdracht_1.html">fundament opdracht 1</a>
 	<br><br>
