--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="shortcut icon" type="image/x-icon" href="p/Top.jpg">
+  <title>Hub World</title>
 </head>
 
 <body>
