--- a/Logitech_shop/About.html
+++ b/Logitech_shop/About.html
@@ -24,7 +24,8 @@
         <img src="https://i.pinimg.com/originals/ba/b7/8b/bab78b1ab6202c17519384fb90b06412.png" 
             alt="logitech logo" width="413.25" height="354.25"></p> </div>
     <div class="box e">E <h1>ADVANCED GEAR FOR ADVANCED GAMING</h1><p>Logitech G holds a long list of industry firsts in the advancement of gaming gear. We have a long legacy of inventing new technology and optimizing engineering, but what we really care about is what’s next.</p></div>
-    <div class="box f"><p>F</p></div>
+    <div class="box f"><p> <img src="https://resource.logitechg.com/w_1800,c_limit,f_auto,q_auto:best,f_auto,dpr_auto/content/dam/gaming/en/about/about-location.png?v=1" 
+            alt="logitech logo" width="1800" height="746"></p></div>
     <div class="box g"><p>g</p></div>
     <div class="box h"><p>h</p></div>
 </div>   
