--- a/Logitech_shop/About.html
+++ b/Logitech_shop/About.html
@@ -22,7 +22,7 @@
       <div class="box c"><h1>A PASSION FOR PLAY</h1><p>Gaming is a way of life for Logitech G. Our team continually partners with all the major game developers to make sure our gear takes the latest gaming experience to its height. Logitech G also sponsors hundreds of pros and pro teams around the world, collaborating with the athletes themselves to design the most winning gear possible.</p></div>
       <div class="box d"><img src="https://i.pinimg.com/originals/ba/b7/8b/bab78b1ab6202c17519384fb90b06412.png" 
             alt="logitech logo" width="413.25" height="354.25"></p> </div>
-    <div class="box e">E <h1>ADVANCED GEAR FOR ADVANCED GAMING</h1><p>Logitech G holds a long list of industry firsts in the advancement of gaming gear. We have a long legacy of inventing new technology and optimizing engineering, but what we really care about is what’s next.</p></div>
+    <div class="box e"><h1>ADVANCED GEAR FOR ADVANCED GAMING</h1><p>Logitech G holds a long list of industry firsts in the advancement of gaming gear. We have a long legacy of inventing new technology and optimizing engineering, but what we really care about is what’s next.</p></div>
     <div class="box f"><h1>LOCATIONS</h1><img src="https://resource.logitechg.com/w_1800,c_limit,f_auto,q_auto:best,f_auto,dpr_auto/content/dam/gaming/en/about/about-location.png?v=1" 
             alt="logitech logo" width="1800" height="746"></div>
     <div class="box g"><h1>GLOBAL HEADQUARTERS</h1></div>
