--- a/Logitech_shop/index.html
+++ b/Logitech_shop/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="Pelle">
 	<meta name="keywords" content="Pelle, Logitech G">
-	<meta name="description" content="The Official Pelle Logitech shop, Get your gamer gear now ">
+	<meta name="description" content="The Official Logitech Website, Get your gamer gear now!">
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 
