--- a/Logitech_shop/About.html
+++ b/Logitech_shop/About.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="topnav">
-  <a href="index.html">Home</a>
+  <a href="index">Home</a>
   <a href="Accessories.html">Accessories</a>
   <div class="topnav-right">
     <a href="#search">Empty</a>
