--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <a href="https://workground.jonkopaffers.repl.co/">German Blog</a>
   <br><br>
   <a href="https://springhigh.repl.co/">Leerpleintoernooi</a>
+  <a href="sh_opendag/sh_opendag.html">Sh_opendagen</a>  
+  <br><br>
 	<h1>Hoofdstuk 1</h1>
 	<a href="https://larsthenoob.github.io/Fundament/fundament_opdracht_1.html">fundament opdracht 1</a>
 	<br><br>
@@ -26,15 +28,11 @@
 <br><br>
 <a href="Fundament/fundament_opdracht_6/fundament_opdracht_6.html">fundament opdracht 6</a> 
 <br><br>
-<a href="Fundament/fundament_opdracht_7/fundament_opdracht_7.html">fundament opdracht 7</a> 
+<a href="Fundament/fundament_opdracht_7/fundament_opdracht_7.html">fundament opdracht 7</a>
 <br><br>
+
 <h1 class="center"> About me </h1>
 <br>
 <a class="Right" href="none">My Favorite games</a>
-
-
-
 </body>
-
-
 </html>
