--- a/sh_opendag/sh_opendag.html
+++ b/sh_opendag/sh_opendag.html
@@ -62,7 +62,10 @@
   <span class="dot" onclick="currentSlide(3)"></span>
 </div>
 <footer>
-  <h1>haey</h1>
+  <h1 class="left">Springhigh</h1>
+  <p class="left">Herman Poortstraat 17, 1064 BR Amsterdam<br>Telefoon +31205893030<br>9RGJ+MC Amsterdam</p>
+  <h1 class="right"><a href="mailto:Info@springhigh.nl">Info@sprinhigh.nl</a></h1>
+  <h1 class="center">TEXT TEXT TEXT </h1>
 <footer>
   </body>
 </html>
